--- a/yamls/2-deployment/deployment.yaml
+++ b/yamls/2-deployment/deployment.yaml
@@ -1,1 +1,26 @@
-apiVersion
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+  labels:
+    app: nginx
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:latest
+        env:
+          - name: NGINX_VERSION
+            value: latest
+          - name: DATABASE_URL
+            value: "https://database.com"
+          - name: DATABASE_USER
+            value: postgress
