--- a/yamls/5-configmap/configmap.yaml
+++ b/yamls/5-configmap/configmap.yaml
@@ -1,2 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
+metadata:
+  name: nginx-data
+data:
+  DATABASE_URL: "https://database.com"
+  DATABASE_USER: postgress
+  DATABASE_PASSWORD: "password"
